Refactored user services, added controllers and services for auxiliary data, and improved error handling