@@ -2,6 +2,7 @@ package com.example.service;
 
 import com.example.dto.LoginDto;
 import com.example.dto.RegisterDto;
+import com.example.dto.UserLongInfoDto;
 import com.example.dto.UserShortInfoDto;
 import com.example.entity.Credential;
 import com.example.entity.Role;
@@ -10,26 +11,21 @@ import com.example.mapper.UserShortInfoMapper;
 import com.example.repository.RoleRepository;
 import com.example.repository.UserRepository;
 import com.example.security.JwtService;
+import jakarta.validation.Valid;
 import lombok.AllArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
-public class UserService implements UserDetailsService {
+public class UserService {
     private final UserRepository userRepository;
     private final PasswordEncoder passwordEncoder;
     private final RoleRepository roleRepository;
@@ -76,12 +72,13 @@ public class UserService implements UserDetailsService {
         return user;
     }
 
-    public List<UserShortInfoDto> getUsers(int page, int size) {
+    public ResponseEntity<List<UserShortInfoDto>> getUsers(int page, int size) {
         Page<User> usersPage = userRepository.findAll(PageRequest.of(page, size));
-        return usersPage.getContent()
+        List<UserShortInfoDto> users = usersPage.getContent()
                 .stream()
-                .map(UserShortInfoMapper::toDto)
-                .collect(Collectors.toList());
+                .map(UserShortInfoMapper.INSTANCE::entityToDto)
+                .toList();
+        return ResponseEntity.ok(users);
     }
 
     private Role getUserRole() {
@@ -101,22 +98,15 @@ public class UserService implements UserDetailsService {
         return ResponseEntity.ok().body("Balance successfully updated");
     }
 
+    public ResponseEntity<UserLongInfoDto> getUserInfo(Long id) {
 
-    public User getAuthenticatedUser() {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        if (authentication != null && authentication.getPrincipal() instanceof User user) {
-            return user;
-        }
-        throw new RuntimeException();//TODO
     }
 
-    public Long getAuthenticatedUserId() {
-        return getAuthenticatedUser().getId();
+    public ResponseEntity<RegisterDto> updateUser(Long id, @Valid RegisterDto registerDto) {
+
     }
 
-    @Override
-    public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        return userRepository.findByUsername(username)
-                .orElseThrow(() -> new UsernameNotFoundException("User not found"));//TODO
+    public ResponseEntity<Void> deleteUser(Long id) {
+        return ResponseEntity.noContent().build();
     }
 }
